# deep-learn-c

./: .gitignore  CMakeLists.txt
src/: linear_network.c  linear_network.h  main  main.c  vanilla_sgd.c  vanilla_sgd.h
src/general_lib/: random.c  random.h  stdlib_mod.c  stdlib_mod.h
src/general_ml/: activation.c  activation.h  loss.c  loss.h
src/layers/: layer.h
src/layers/convolutional/: convolutional_filter.c  convolutional_filter.h  convolutional_layer.c  convolutional_layer.h  image_structures.c  image_structures.h  img_activation.c  img_activation.h  img_structures.c  img_structures.h
src/layers/convolutional-old/: convolutional_layer.c
src/layers/linear/: linear_activation.c  linear_activation.h  linear_layer.c  linear_layer.h  linear_model.c  linear_model.h
src/layers/pooling/: pooling_layer.c  pooling_layer.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/: main.c  tests.c  tests.h
